* ???  Ted Felix <http://www.tedfelix.com>
  - 2.0.14 release
  - Added a pathname to connection along with a find_connection_name().  
    Modifications to process_inotify() to log IN_DELETE events.  Additional 
    debugging output.
      
    These changes were experimentation related to dealing with a ThinkPad 
    suspend problem.  They should have no effect on acpid's behavior.  They are 
    mainly noticeable as a change in the logging.
    
    The Problem: When resuming from suspend, the lid switch and power button's 
    /dev/input event files do not trigger an IN_CREATE, so acpid doesn't 
    reconnect to them.  Restarting acpid fixes this.
    
    Tried using IN_DELETE instead of ENODEV to detect the drivers going away.
    Worked fine for disconnecting/reconnecting a USB keyboard, but not for the
    ThinkPad suspend problem.  I've given up on fixing this as it appears to be
    a kernel or driver issue.
    
    (connection_list.c connection_list.h inotify_handler.c input_layer.c 
    netlink.c proc.c sock.c)  (Ted Felix)
      
* Tue Nov 15 2011  Ted Felix <http://www.tedfelix.com>
  - 2.0.13 release
  - Fix for socket name buffer overflow.  (ud_socket.c)  (Ted Felix)
  - Moved acpid_log() out of acpid.h/.c and into log.h/.c to make it easier
    for all parts of acpid to use.  (Makefile acpid.h acpid.c connection_list.c
    event.c inotify_handler.c input_layer.c log.h log.c netlink.c proc.c 
    sock.c ud_socket.c)  (Ted Felix)
  - Cleaned up #includes and comment style.  (libnetlink.c libnetlink.h)
    (Ted Felix)

* Mon Aug 15 2011  Ted Felix <http://www.tedfelix.com>
  - 2.0.12 release
  - Changed exit() to _exit() if execl() fails.  (event.c)  (Ted Felix)

* Sat Jul 30 2011  Ted Felix <http://www.tedfelix.com>
  - 2.0.11 release
  - Set umask to 0077 for scripts run by acpid.  (event.c)  (Ted Felix)

* Tue May 17 2011  Ted Felix <http://www.tedfelix.com>
  - 2.0.10 release
  - Fixed compiler warnings in kacpimon.  (kacpimon/libnetlink.c)